# project-LICHEN

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOLT_REMOTE.md  LICHEN-plan.md  README.md  RECONCILIATION.md  artifacts-2auf.59.4.1.3.2.1.2.md  artifacts-2auf.59.4.1.3.2.1.3.txt  artifacts-2auf.59.4.1.3.2.2.2.3.txt  artifacts-2auf.59.4.1.3.2.2.2.4.txt  artifacts-2auf.59.4.1.3.2.2.3.txt  artifacts-2auf.59.4.1.3.2.2.4.txt  buavqtntnefvg6nnemqm4rp7hjr1knio  build-exit-2auf.59.4.1.3.2.1.3.txt  build-provenance-2auf.59.4.1.3.2.1.3.md  build-provenance-2auf.59.4.1.3.2.2.1.md  build-provenance-2auf.59.4.1.3.2.2.3.md  build-t1000e.sh  build-t_echo.sh  constants.toml  dkjjmvlfktipl5o5avtio1js4rmkcqoc  flash-t1000e-uf2.sh  flash-t1000e.sh  flash-t_echo.sh  libfragment.rlib  lichen-sales.csv  manifest  procurement.md  recover.sh  research-2auf.59.4.1.3.2.2.2.1.md  rfc2217-servers.sh  smp-flash.py  test-exit-2auf.59.4.1.3.2.2.4.txt  validation-artifacts-ble-meshcore.md  validation-summary-2auf.59.4.1.3.2.2.2.4.md  validation-summary-2auf.59.4.1.3.2.2.4.md  zephyr
firmware/bridge-esp32/: Cargo.toml
firmware/bridge-esp32/.cargo/: config.toml
firmware/bridge-esp32/src/: main.rs
firmware/bridge-stm32wl/: Cargo.toml  memory.x
firmware/bridge-stm32wl/.cargo/: config.toml
firmware/bridge-stm32wl/src/: iv.rs  main.rs
firmware/bridge-zephyr/: CMakeLists.txt  Kconfig  prj.conf
firmware/bridge-zephyr/boards/: heltec_lora32_v3.conf  heltec_lora32_v3.overlay  heltec_t114.conf  heltec_t114.overlay  heltec_vision_master_e213.conf  heltec_vision_master_e213.overlay  heltec_vision_master_e290.conf  heltec_vision_master_e290.overlay  heltec_wifi_lora32_v3_esp32s3_procpu.conf  heltec_wifi_lora32_v3_esp32s3_procpu.overlay  heltec_wireless_tracker.conf  heltec_wireless_tracker.overlay  lilygo_tbeam.conf  lilygo_tbeam.overlay  lilygo_tdeck.conf  lilygo_tdeck.overlay  lilygo_techo.conf  lilygo_techo.overlay  rak19007_wisblock.conf  rak19007_wisblock.overlay  rak4631_nrf52840.conf  rak4631_nrf52840.overlay  seeed_t1000e.conf  seeed_t1000e.overlay  seeed_wio_tracker_1110.conf  seeed_wio_tracker_1110.overlay  station_g2.conf  station_g2.overlay  t1000_e_nrf52840.conf  t1000_e_nrf52840.overlay  t_deck_esp32s3_procpu.conf  t_echo_nrf52840.conf  t_echo_nrf52840.overlay  xiao_s3_wio_sx1262.conf  xiao_s3_wio_sx1262.overlay
firmware/bridge-zephyr/src/: main.c
firmware/bridge-zephyr/subsys/: CMakeLists.txt  Kconfig
lichen/apps/gateway/: CMakeLists.txt  Kconfig  meshtastic_compat.conf  prj.conf  sample.yaml
lichen/apps/puck/: CMakeLists.txt  Kconfig  prj.conf  sections-ram.ld
lichen/subsys/lichen/: CMakeLists.txt  Kconfig
lichen/tests/ble_app_owner/: CMakeLists.txt  prj.conf  testcase.yaml
lichen/tests/ble_ingress/: CMakeLists.txt  prj.conf  testcase.yaml
lichen/zephyr/: CMakeLists.txt  Kconfig  module.yml
python/: .coverage  README.md  pyproject.toml  test
python/src/lichen/: __init__.py  board_intake.py  channel_plan.py  compact_cot.py  constants.py  gradient.py  l2_payload.py  messages.py  node.py  state_machine.py
python/tests/: __init__.py  conftest.py  test_board_intake.py  test_compact_cot.py  test_div.py  test_gnss_nmea_feeder.py  test_gradient.py  test_hypothesis.py  test_l2_payload.py  test_lci_contract_docs.py  test_math_util.py  test_mod.py  test_multiply.py  test_node.py  test_node_coap_integration.py  test_packaging.py  test_simple.py  test_ultracode_demo.py  test_vectors.py
python/tests/announce/: __init__.py  test_coords.py  test_messages.py  test_processor.py  test_scheduler.py
python/tests/client/: __init__.py  test_ble.py  test_ip_coap.py  test_lci.py  test_packet_coap.py
python/tests/coap/: test_context_store.py  test_edhoc_transport.py  test_key_resource.py  test_messages_resource.py  test_node_channel.py  test_presence_resource.py  test_proxy.py  test_resource_directory.py  test_resources.py  test_schc_channel.py  test_secure.py  test_secure_lifecycle.py  test_senml_resources.py  test_sos_resource.py  test_transport.py  test_udp_server.py
python/tests/crypto/: __init__.py  test_edhoc.py  test_identity.py  test_oscore.py  test_oscore_vectors.py  test_schnorr48.py
python/tests/dashboard/: test_dashboard.py
python/tests/firmware/: test_bridge_zephyr_cmake.py  test_build_epoch_cmake.py
python/tests/gateway/: __init__.py  test_compact_cot.py
python/tests/integration/: __init__.py  test_native_lci.py
python/tests/interface/: conftest.py  test_handler.py  test_kiss_aprs.py  test_kiss_aprs_synth.py  test_kiss_ax25.py  test_kiss_bridge.py  test_kiss_callsign.py  test_kiss_framing.py  test_kiss_gatt.py  test_kiss_handler.py  test_kiss_integration.py  test_kiss_payload_fmt.py  test_kiss_serial.py  test_meshtastic_address.py  test_meshtastic_translate.py  test_messages.py  test_serial.py  test_tcp.py
python/tests/ipv6/: test_addr.py  test_icmpv6.py  test_packet.py  test_udp.py
python/tests/link/: __init__.py  test_frame.py  test_link_layer.py  test_replay.py  test_tx_queue.py
python/tests/loadng/: test_cache.py  test_discovery.py  test_error.py  test_messages.py  test_rreq_jitter.py
python/tests/radio/: __init__.py  test_base.py  test_sim_client.py
python/tests/routing/: __init__.py  test_router.py
python/tests/rpl/: test_dao.py  test_dodag.py  test_messages.py  test_routing.py  test_trickle.py  test_visualize.py
rust/: Cargo.toml  liblichen_rpl.rlib  librust_out.rlib
rust/lichen-apps/: Cargo.toml
rust/lichen-cli/: Cargo.toml
rust/lichen-client/: Cargo.toml
rust/lichen-coap/: Cargo.toml
rust/lichen-core/: Cargo.toml
rust/lichen-embassy/: Cargo.toml
rust/lichen-gateway/: Cargo.toml  lichend.service
rust/lichen-hal/: Cargo.toml
rust/lichen-ipv6/: Cargo.toml
rust/lichen-kiss/: Cargo.toml
rust/lichen-link/: Cargo.toml
rust/lichen-meshtastic/: Cargo.toml  build.rs
rust/lichen-node/: Cargo.toml
rust/lichen-oscore/: Cargo.toml
rust/lichen-rpl/: Cargo.toml
rust/lichen-schc/: Cargo.toml
rust/lichen-senml/: Cargo.toml
rust/lichen-sim/: Cargo.toml
rust/lichen-tui/: Cargo.toml
(+12989 files in other folders)
