[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lichen"
version = "0.1.0"
description = "LICHEN: LoRa IPv6 CoAP Hybrid Extended Network"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Mark Atwood" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
dependencies = [
    "aiocoap==0.4.17",
    "anyio>=4.14.1,<4.15",
    "starlette>=1.3.1,<1.4",
    "uvicorn>=0.49,<0.50",
    "pynacl>=1.6,<2",
    "pyserial>=3.5",
    "structlog>=26.1,<26.2",
    "cbor2>=6.1.2,<6.2",
    "textual>=8.2.7,<8.3",
    "rich>=15.0.0,<15.1",
    "cryptography>=49.0,<49.1",
    "filelock>=3.29,<3.30",
    "defusedxml>=0.7.1,<0.8",
    "intelhex>=2.3.0,<3.0",
    "pytest>=9.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-timeout>=2.4,<3",
    "pytest-cov>=7,<8",
    "httpx>=0.28,<0.29",
    "hypothesis>=6.100,<7",
    "jsonschema>=4.26,<5",
    "ruff>=0.15,<0.16",
    "mypy>=2.1,<3",
]
meshtastic = [
    "betterproto>=2.0.0b6",
    "bleak>=0.21",
]
ble = [
    "bleak>=0.21",
]
coap = [
    "aiocoap==0.4.17",
]
native-client = [
    "aiocoap==0.4.17",
    "cbor2>=6.1.2,<6.2",
    "textual>=8.2.7,<8.3",
    "rich>=15.0.0,<15.1",
]

[project.scripts]
lichen-sim = "lichen.sim.server:main"
lichen-tui = "lichen.tui.app:main"
lichen-native-tui = "lichen.tui.native:main"
lichen-native-client = "lichen.tui.native:main"
lichen-dashboard = "lichen.dashboard.app:main"
lichen-board-intake = "lichen.board_intake:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lichen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# Explicit mypy scope and handling per project-LICHEN-kpv0 acceptance:
# - aiocoap, starlette lack py.typed/stubs: ignore_missing_imports (not error suppression).
# - Core protocol modules fixed for clean pass; no broad ignores or untyped-def disables.
# - TUI/dashboard/tests excluded from CI gate (prototype code).
[[tool.mypy.overrides]]
module = ["aiocoap.*", "starlette.*"]
ignore_missing_imports = true

# Targeted override for aiocoap integration modules (explicitly decided scope per kpv0).
# Subclassing untyped aiocoap base classes triggers [misc]; disabled only for these files.
# No per-line ignores or project-wide silencing.
[[tool.mypy.overrides]]
module = [
    "lichen.coap.resources",
    "lichen.coap.transport",
    "lichen.crypto.oscore",
    "lichen.coap.secure",
]
disable_error_code = ["misc"]
