[workspace]
resolver = "2"
members = [
    "lichen-core",
    "lichen-hal",
    "lichen-embassy",
    "lichen-link",
    "lichen-kiss",
    "lichen-meshtastic",
    "lichen-schc",
    "lichen-coap",
    "lichen-senml",
    "lichen-oscore",
    "lichen-ipv6",
    "lichen-node",
    "lichen-gateway",
    "lichen-sim",
    "lichen-apps",
    "lichen-client",
    "lichen-cli",
    "lichen-tui",
    "lichen-rpl",
    # Board-specific firmware (no_std targets)
    "lichen-firmware/wio-e5",
]

# Default members excludes embedded firmware (requires cross-compilation)
default-members = [
    "lichen-core",
    "lichen-hal",
    "lichen-link",
    "lichen-kiss",
    "lichen-meshtastic",
    "lichen-schc",
    "lichen-coap",
    "lichen-senml",
    "lichen-oscore",
    "lichen-ipv6",
    "lichen-node",
    "lichen-gateway",
    "lichen-sim",
    "lichen-apps",
    "lichen-client",
    "lichen-cli",
    "lichen-tui",
    "lichen-rpl",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-or-later"
rust-version = "1.81"
