[package]
name = "lichen-apps"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Shared application utilities and CLI parsing stubs for LICHEN tools."

[features]
default = []
# Logging: propagates to dependencies
log = ["dep:log", "lichen-node/log"]

[dependencies]
# Logging backend (optional, feature-gated)
log = { version = "0.4", default-features = false, optional = true }
lichen-node = { path = "../lichen-node", features = ["std"] }
lichen-link = { path = "../lichen-link", features = ["std", "schnorr"] }
serde_json = "1.0"
hex = "0.4"

[[bin]]
name = "frame-parser"
path = "src/bin/frame_parser.rs"
