[package]
name = "lichen-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "LICHEN command-line interface — query and control a node via CoAP."

[[bin]]
name = "lichen"
path = "src/main.rs"

[dependencies]
lichen-core   = { path = "../lichen-core" }
lichen-coap   = { path = "../lichen-coap", features = ["tokio"] }
lichen-client = { path = "../lichen-client" }

clap      = { version = "4", features = ["derive", "color", "env"] }
tokio     = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium  = "0.2"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize            = "1"
sha2               = { version = "0.11", default-features = false }
getrandom          = { version = "0.2", features = ["std"] }
percent-encoding   = "2"
