[package]
name = "lichen-coap"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "CoAP (RFC 7252): message types, options, and blockwise transfer stubs."

[features]
default = []
std = ["dep:tokio"]

[dependencies]
lichen-core = { path = "../lichen-core" }

[dependencies.tokio]
version = "1"
features = ["net", "time", "rt"]
optional = true
