[package]
name = "lichen-coap"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "CoAP (RFC 7252): message types, options, and blockwise transfer stubs."

[features]
default = []
std = []
tokio = ["std", "dep:tokio"]
# Logging: enable one or neither, not both
defmt = ["dep:defmt", "lichen-core/defmt"]
log = ["dep:log", "lichen-core/log"]

[dependencies]
lichen-core = { path = "../lichen-core" }

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }

[dependencies.tokio]
version = "1"
features = ["net", "time", "rt"]
optional = true
