[package]
name = "lichen-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "LICHEN protocol primitives: constants, address types, and frame type stubs."

[features]
default = []
std = []
# Logging: enable one or neither, not both
defmt = ["dep:defmt"]
log = ["dep:log"]

[dependencies]
# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }
heapless = { version = "0.8", default-features = false }
lichen-ipv6 = { path = "../lichen-ipv6", default-features = false }
sha2 = { version = "0.11.0", default-features = false, features = ["zeroize"] }

[dev-dependencies]
serde_json = "1.0"
lichen-core = { path = ".", features = ["std"] }
