[package]
name = "lichen-gateway"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "LICHEN border router (6LBR) daemon for Linux."

[features]
default = []
# Enable log feature on all dependencies for unified logging
log = ["lichen-core/log", "lichen-kiss/log", "lichen-node/log", "lichen-schc/log", "lichen-sim/log"]

[dependencies]
lichen-core = { path = "../lichen-core" }
lichen-kiss = { path = "../lichen-kiss", features = ["kiss"] }
lichen-node = { path = "../lichen-node", features = ["std"] }
lichen-schc = { path = "../lichen-schc", features = ["std"] }
lichen-sim  = { path = "../lichen-sim" }

# Async runtime + serial I/O
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "signal", "sync"] }
tokio-serial = "5"

# Config
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[[bin]]
name = "lichend"
path = "src/bin/lichend.rs"
