[package]
name = "lichen-hal"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Hardware abstraction traits for LICHEN. Implemented by Embassy HALs and Linux std."

[features]
default = []
std = []

# Hardware variants
tdeck = []   # T-Deck: ST7789, keyboard, trackball
tbeam = []   # T-Beam: SSD1306, buttons
twatch = []  # T-Watch: ST7789, touch

[dependencies]
# ponytail: no deps, pure traits

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
