[package]
name = "lichen-hal"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Hardware abstraction traits for LICHEN. Implemented by Embassy HALs and Linux std."

[features]
default = []
std = []
# Logging: enable one or neither, not both
defmt = ["dep:defmt", "lichen-link/defmt"]
log = ["dep:log", "lichen-link/log"]
rand = ["dep:rand_core"]  # Enables RngCore + CryptoRng blanket impls for lichen_hal::Rng (for EDHOC etc.)

# Hardware variants
tdeck = []   # T-Deck: ST7789, keyboard, trackball
tbeam = []   # T-Beam: SSD1306, buttons
twatch = []  # T-Watch: ST7789, touch

[dependencies]
heapless = { version = "0.8", default-features = false }
lichen-link = { path = "../lichen-link" }
rand_core = { version = "0.6", default-features = false, optional = true }

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
