[package]
name = "lichen-kiss"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "KISS protocol framing for TNC app compatibility (APRSDroid, aprs.fi)."

[features]
default = []
std = []
kiss = []
kiss-aprs = ["kiss"]
kiss-ble = ["kiss"]
bridge = ["kiss", "dep:lichen-link"]

[dependencies]
heapless = "0.8"
lichen-link = { path = "../lichen-link", default-features = false, optional = true }

[dev-dependencies]
lichen-link = { path = "../lichen-link" }
