[package]
name = "lichen-kiss"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version = "1.81"
description = "KISS protocol framing for TNC app compatibility (APRSDroid, aprs.fi)."

[features]
default = []
std = []
kiss = []
kiss-aprs = ["kiss"]
kiss-ble = ["kiss"]
bridge = ["kiss", "dep:lichen-link"]
# Logging: enable one or neither, not both
defmt = ["dep:defmt"]
log = ["dep:log"]

[dependencies]
heapless = "0.8"
lichen-link = { path = "../lichen-link", default-features = false, optional = true }

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
lichen-link = { path = "../lichen-link" }
