[package]
name = "lichen-link"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "LICHEN link layer: frame format, LLSec modes, and replay window."

[features]
default = []
std = []
alloc = []  # Enables alloc-dependent code; required by schnorr feature
schnorr = ["alloc", "dep:curve25519-dalek", "dep:sha2"]
# Logging: enable one or neither, not both
defmt = ["dep:defmt", "lichen-core/defmt"]
log = ["dep:log", "lichen-core/log"]

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc"], optional = true }
lichen-core = { path = "../lichen-core" }
sha2 = { version = "0.11.0", default-features = false, optional = true }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }
