[package]
name = "lichen-meshtastic"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Meshtastic protobuf types for LICHEN bridge"

[features]
default = []
std = ["prost/std"]

[dependencies]
heapless = "0.8"
prost = { version = "0.13", default-features = false, features = ["derive"] }

[build-dependencies]
prost-build = "0.13"
