[package]
name = "lichen-meshtastic"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Meshtastic protobuf types for LICHEN bridge"

[features]
default = ["alloc"]
alloc = []  # Required: this crate uses Vec/String from alloc
std = ["alloc", "prost/std"]
# Logging: enable one or neither, not both
defmt = ["dep:defmt", "lichen-core/defmt", "lichen-link/defmt"]
log = ["dep:log", "lichen-core/log", "lichen-link/log"]

[dependencies]
hashbrown = "0.15"
heapless = "0.8"
lichen-core = { path = "../lichen-core" }
lichen-link = { path = "../lichen-link" }
prost = { version = "0.13", default-features = false, features = ["derive"] }
sha2 = { version = "0.11", default-features = false }

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }

[build-dependencies]
prost-build = "0.13"
