[package]
name = "lichen-meshtastic"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Meshtastic protobuf types for LICHEN bridge"

[features]
# Consistent with workspace: no default features. This crate requires alloc
# for Vec/String, but callers should enable it explicitly.
default = []
alloc = []  # Required: this crate uses Vec/String from alloc
std = ["alloc", "prost/std"]
# Logging: enable one or neither, not both
defmt = ["dep:defmt", "lichen-core/defmt", "lichen-link/defmt"]
log = ["dep:log", "lichen-core/log", "lichen-link/log"]

[dependencies]
hashbrown = "0.15"
heapless = "0.8"
lichen-core = { path = "../lichen-core" }
lichen-link = { path = "../lichen-link" }
prost = { version = "0.13", default-features = false, features = ["derive"] }

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }

[build-dependencies]
prost-build = "0.13"
