[package]
name = "lichen-node"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "LICHEN integration crate: combines link, SCHC, CoAP, and routing stubs."

[features]
default = []
std = ["lichen-hal/std", "lichen-link/std", "lichen-link/schnorr"]

[dependencies]
lichen-core = { path = "../lichen-core" }
lichen-hal = { path = "../lichen-hal" }
lichen-link = { path = "../lichen-link" }
lichen-schc = { path = "../lichen-schc" }
lichen-coap = { path = "../lichen-coap" }
lichen-ipv6 = { path = "../lichen-ipv6" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
