[package]
name = "lichen-node"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "LICHEN integration crate: combines link, SCHC, CoAP, and routing stubs."

[features]
default = []
std = ["lichen-hal/std", "lichen-link/std", "lichen-link/schnorr", "dep:lichen-rpl", "lichen-rpl?/std", "dep:lichen-oscore", "lichen-oscore?/std", "lichen-ipv6/std", "dep:tokio", "lichen-meshtastic?/std"]
# Meshtastic bridge integration
meshtastic = ["dep:lichen-meshtastic", "lichen-meshtastic/alloc"]
# Logging: defmt takes precedence when both are enabled
defmt = ["dep:defmt", "lichen-core/defmt", "lichen-hal/defmt", "lichen-link/defmt", "lichen-schc/defmt", "lichen-coap/defmt", "lichen-ipv6/defmt", "lichen-rpl?/defmt", "lichen-oscore?/defmt"]
log = ["dep:log", "lichen-core/log", "lichen-hal/log", "lichen-link/log", "lichen-schc/log", "lichen-coap/log", "lichen-ipv6/log", "lichen-rpl?/log", "lichen-oscore?/log"]

[dependencies]
lichen-core = { path = "../lichen-core" }
lichen-hal = { path = "../lichen-hal" }
lichen-link = { path = "../lichen-link" }
lichen-schc = { path = "../lichen-schc" }
lichen-coap = { path = "../lichen-coap" }
lichen-ipv6 = { path = "../lichen-ipv6", default-features = false }
lichen-rpl = { path = "../lichen-rpl", optional = true }
lichen-oscore = { path = "../lichen-oscore", optional = true, default-features = false }
lichen-meshtastic = { path = "../lichen-meshtastic", optional = true, default-features = false }
heapless = "0.8"
libm = "0.2"

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }

# Async runtime for scheduler (std only)
tokio = { version = "1", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
