# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: The contributors to the LICHEN project

[package]
name = "lichen-oscore"
description = "OSCORE (RFC 8613) implementation for LICHEN"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lichen-core = { path = "../lichen-core" }

# ponytail: using pure-Rust crypto crates until a battle-tested no_std OSCORE
# crate exists (liboscore requires C FFI which complicates embedded cross-compile).
# Switch to liboscore or coapcore when they mature for embedded targets.
aes = { version = "0.8", default-features = false }
ccm = { version = "0.5", default-features = false }
heapless = "0.8"
hkdf = { version = "0.13", default-features = false }
sha2 = { version = "0.11", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }

# EDHOC (RFC 9528) Suite 0 - feature-gated since it adds dependencies
# ponytail: lakers only supports Suite 2 (P-256), not Suite 0 (X25519/Ed25519).
# Rolling minimal Suite 0 for interop with Python simulator.
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"], optional = true }
ed25519-dalek = { version = "2.1", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"], optional = true }

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "0.4"

[features]
default = []
std = []
# EDHOC Suite 0 (RFC 9528) for establishing OSCORE contexts
# Uses X25519/Ed25519 to match link-layer Schnorr48
edhoc = ["dep:x25519-dalek", "dep:ed25519-dalek", "dep:rand_core"]
# Logging: enable one or neither, not both
defmt = ["dep:defmt", "lichen-core/defmt"]
log = ["dep:log", "lichen-core/log"]
